# bandfoss

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Family_Jam_Setup.md  JBL_BandBox_Solo_vs_Trio_Differences.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json.tmp.3893402.a0573ec71fe1
bandbox/: __init__.py  __main__.py  app.py  config.py
bandbox/capture/: __init__.py  file_source.py  live_source.py  router.py
bandbox/engine/: __init__.py  gains.py  live_engine.py  mixer.py  ring.py  separator.py
bandbox/ui/: __init__.py  main_window.py
bandfoss/: __init__.py  __main__.py  app.py  config.py  i18n.py  util.py
bandfoss/capture/: __init__.py  base.py  coreaudio_source.py  file_source.py  live_source.py  router.py  wasapi_source.py
bandfoss/engine/: __init__.py  gains.py  live_engine.py  mixer.py  ring.py  separator.py
bandfoss/ui/: __init__.py  main_window.py  theme.py
scripts/: smoke_test.py
tests/: test_capture_factory.py  test_config.py  test_file_source.py  test_gains.py  test_live_pipeline.py  test_ring.py
